Delete folder action icon, ref #1683

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -36,6 +36,7 @@ action_open_settings_information.icon=icons/Settings.png
 action_open_explorer.icon=icons/Directory.gif
 action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
+action_remove_folder.icon=icons/Delete.png
 action_remove_directory.icon=icons/Delete.gif
 action_remove_ignore.icon=icons/Delete.gif
 action_remove_invitee.icon=icons/Delete.gif
