--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -35,6 +35,7 @@ action_open_settings_information.icon=de/dal33t/powerfolder/skin/powerfolder1/ic
 action_open_explorer.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Directory.png
 action_pending_messages.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/ChatPending.png
 action_reconnect.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/ConnectBright.png
+action_remove_folder.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Delete.png
 action_remove_friend.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/RemoveFriend.png
 action_remove_directory.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Delete.png
 action_remove_ignore.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Delete.png
