--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
@@ -38,6 +38,7 @@ action_remove_friend.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/RemoveFr
 action_remove_directory.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Delete.gif
 action_remove_ignore.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Delete.gif
 action_remove_invitee.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Delete.gif
+action_remove_folder.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Delete.png
 action_restore_file.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Restore.gif
 action_restore_archive.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Restore.gif
 action_search_invitee.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/FindComputers.gif
