--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1217,6 +1217,8 @@ status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
 status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+status_bar.limited_connectivity_warning.title=Limited connectivity
+status_bar.limited_connectivity_warning.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is explained in our documentation:\n{0}
 
 status.download=Down\: {0} KB/s
 status.active_download_count=Active\: {0}
