--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -310,9 +310,30 @@ pro.http.options.port=Port
 pro.http.options.title=HTTP Connection settings
 pro.http.options.username=Username
 pro.http.options.withauth=With authorization
+pro.http.name=HTTP tunneled connections
+pro.http.description=HTTP connections tunneled via HTTP
+pro.monitor.name=Remote Monitoring
+pro.monitor.description=Activates remote monitoring of this client
+pro.filelist_writer.name=Filelist Writer
+pro.filelist_writer.description=Writes the filelists as CSV file into the folder
+pro.activation.name=Program Activation
+pro.activation.description=Activate the program here
+pro.server_admin.name=Server Admin Console
+pro.server_admin.description=Manages connected servers
+pro.system_service.name=System Service
+pro.system_service.description=Configure to run as system service
+pro.systemservice.options.info1=Use these options install/uninstall
+pro.systemservice.options.info2=PowerFolder as system service.
+pro.systemservice.options.install=Install
+pro.systemservice.options.title=PowerFolder System Service
+pro.systemservice.options.uninstall=Uninstall
+pro.udt_connections.name=Direct UDT connect
+pro.udt_connections.description=Enable to prefer UDT over TCP connections
 pro.process_order.description=
 pro.process_order.key=O
 pro.process_order.name=Process order
+pro.security.description=Provides encrypted transfers
+pro.security.name=Encrypted transfers
 pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
 pro.security.high=High
 pro.security.high_info=High security (default)\:
@@ -1017,6 +1038,9 @@ plugin_disable.name=Disable
 plugin_enable.description=Enable (and start) Plugin
 plugin_enable.key=E
 plugin_enable.name=Enable
+plugin_settings.name=Configure
+plugin_settings.key=C
+plugin_settings.description=Configure this plugin now
 
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advPort=Port
