--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -35,9 +35,9 @@ action_add_friend.description=Add computer to friend list
 action_add_friend.key=A
 action_add_friend.name=Add
 
-action_add_ignore.description=Add a pattern to the ignore list
+action_add_ignore.description=Exclude files from sync
 action_add_ignore.key=A
-action_add_ignore.name=Add
+action_add_ignore.name=Exclude
 
 action_add_invitee.description=Add invitee
 action_add_invitee.key=A
@@ -215,9 +215,9 @@ action_remove_friend.description=Remove computer from friend list
 action_remove_friend.key=R
 action_remove_friend.name=Remove
 
-action_remove_ignore.description=Remove a pattern from the ignore list
-action_remove_ignore.key=R
-action_remove_ignore.name=Remove
+action_remove_ignore.description=Include files in sync
+action_remove_ignore.key=I
+action_remove_ignore.name=Include
 
 action_restore_file.description=Undelete file
 action_restore_file.key=R
@@ -589,9 +589,9 @@ dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect 
 dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.title=Duplicate use
 dialog.synchronization.duplicate.use=This transfer mode is used by the following folders\:
-dialog.synchronization.receive_changes=Receive changes
-dialog.synchronization.send_and_receive_changes=Publish and receive changes
-dialog.synchronization.send_own_changes=Publish own changes
+dialog.synchronization.receive_changes=Download changes only
+dialog.synchronization.send_and_receive_changes=Up- and download changes
+dialog.synchronization.send_own_changes=Upload own changes only
 dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=Manual synchronization
 dialog.unable_to_connect_to_member=Unable to connect to {0}
