Removed ISDN speeds. Added 20 and 30 mbit

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -947,14 +947,14 @@ limited_connection.title=Limited connectivity
 
 line_speed.T1=T1 (1.544mbit)
 line_speed.T3=T3 (43.232mbit)
-line_speed.adsl128=DSL 1000 (128Kbit up)
-line_speed.adsl256=DSL 2000 (256Kbit up)
-line_speed.adsl512=DSL 6000 (512Kbit up)
-line_speed.adsl768=DSL 16000 (768Kbit up)
+line_speed.adsl128=Cable / DSL 1000
+line_speed.adsl256=Cable / DSL 2000
+line_speed.adsl512=Cable / DSL 6000
+line_speed.adsl768=Cable / DSL 16000
+line_speed.adsl1024=Cable / DSL 20000
+line_speed.adsl1536=Cable / DSL 30000
 line_speed.custom_speed=Custom line
 line_speed.download_speed=Download limit
-line_speed.isdn_speed128=Dual ISDN (128Kbit up)
-line_speed.isdn_speed64=ISDN (64Kbit up)
 line_speed.lan1000=LAN 1000mbit/s
 line_speed.lan100=LAN 100mbit/s
 line_speed.lan10=LAN 10mbit/s
