--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -77,7 +77,7 @@ action_delete_file.name=Delete
 
 action_remove_folder.description=Remove this folder
 action_remove_folder.key=R
-action_remove_folder.name=Remove Folder
+action_remove_folder.name=Remove
 
 action_details.description=Display the details panel
 action_details.key=D
@@ -141,7 +141,7 @@ action_online_storage.name=Online Storage
 
 action_open_explorer.description=Open this folder in your operating system's file explorer
 action_open_explorer.key=O
-action_open_explorer.name=Open Folder
+action_open_explorer.name=Open
 
 action_open_problem.description=Open details of this problem in your browser
 action_open_problem.key=O
@@ -173,7 +173,7 @@ action_open_file.name=Open
 
 action_open_files_information.description=Open files information for this folder
 action_open_files_information.key=F
-action_open_files_information.name=Files
+action_open_files_information.name=Browse files
 
 action_open_invitation_received_wizard.description=Open invitation received wizard
 action_open_invitation_received_wizard.key=I
@@ -249,7 +249,7 @@ action_resolve_problem.name=Resolve
 
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
-action_preview_folder.name=Folder Preview
+action_preview_folder.name=Preview
 
 action_single_file_transfer.description=Transfer file to other computer
 action_single_file_transfer.key=T
