--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -371,6 +371,7 @@ pro.wizard.activation.license_key=License Key
 pro.wizard.activation.multiple_key_select=Login successful. Please select the license key to use.
 pro.wizard.activation.no_key_available=No valid license key available
 pro.wizard.activation.number_of_computers=Allowed computers
+pro.wizard.activation.number_gbs=Allowed data (GB)
 pro.wizard.activation.one_key_available=Login successful. Got one license key.
 pro.wizard.activation.online_activation=Online Activation
 pro.wizard.activation.order_additional=Click here to order additional licenses
@@ -927,7 +928,7 @@ home_tab.tell_friend.text=Tell a friend about PowerFolder
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use PowerFolder
 home_tab.total={0} total
 home_tab.you_have=You have
-pro.home_tab.upgrade_to_full=Upgrade PowerFolder
+pro.home_tab.upgrade_powerfolder=Upgrade PowerFolder
 pro.home_tab.renew_license=Renew PowerFolder
 pro.home_tab.remaining.tips=Your license will expire in {0} days
 pro.home_tab.remaining={0} day(s) remaining
