--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -374,11 +374,11 @@ pro.wizard.activation.number_of_computers=Allowed computers
 pro.wizard.activation.number_gbs=Allowed data (GB)
 pro.wizard.activation.one_key_available=Login successful. Got one license key.
 pro.wizard.activation.online_activation=Online Activation
-pro.wizard.activation.order_additional=Click here to order additional licenses
-pro.wizard.activation.order_now=Click here to order PowerFolder Pro
+pro.wizard.activation.order_additional=Order additional licenses here
+pro.wizard.activation.order_now=Upgrade PowerFolder Pro here
 pro.wizard.activation.password_confirm=Confirm password
 pro.wizard.activation.password_length=Valid Email and at least 6 chars for password required.
-pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
+pro.wizard.activation.please_purchase=Please upgrade PowerFolder Pro to continue.
 pro.wizard.activation.pro_activation=PowerFolder Pro Activation
 pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.register_now=Sign up for an account
@@ -807,7 +807,7 @@ free_limit_dialog.buy_recommendation2=PowerFolder is currently disabled until yo
 free_limit_dialog.buy_recommendation3=Support us by getting PowerFolder Pro\!
 free_limit_dialog.buy_recommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 free_limit_dialog.heavy_usage_detected=PowerFolder has detected that you are extensively using it.
-free_limit_dialog.reason=Reason\: More than {0} folders or more than {1} GBs data configured.
+free_limit_dialog.reason=Reason\: More than {1} GBs data or more than {0} folders configured.
 free_limit_dialog.reduce=Reduce usage
 free_limit_dialog.title=Extensive use detected
 free_limit_dialog.whatispro=Why should I upgrade to PowerFolder Pro?
