--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -279,6 +279,10 @@ action_activate_warning.description=Display any warnings
 action_activate_warning.key=W
 action_activate_warning.name=Warning
 
+pro.action_open_license_file.description=Opens a license key file from disk
+pro.action_open_license_file.key=O
+pro.action_open_license_file.name=Open file
+
 ##################
 # Transfer Modes #
 ##################
@@ -362,7 +366,6 @@ pro.wizard.activation.contact_support=Contact the support
 pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_reading_file=Error while reading license key file
 pro.wizard.activation.error_unable_to_read=Unable to read
-pro.wizard.activation.file_activation=File Activation
 pro.wizard.activation.key_abuse=License key abuse detected.
 pro.wizard.activation.key_expired=Your license key has expired\!
 pro.wizard.activation.key_file=License key file
