--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -543,23 +543,23 @@ dialog.bind_error=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
-dialog.create_edit_profile.auto_download=Autodownload
+dialog.create_edit_profile.auto_download=Download new/changed files
 dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
 dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
 dialog.create_edit_profile.change_detection_manual=Manual
-dialog.create_edit_profile.configure_from=Configure from an existing transfer mode
-dialog.create_edit_profile.synchronization=Synchronization
-dialog.create_edit_profile.change_detection=Change detection
+dialog.create_edit_profile.configure_from=Copy from existing
+dialog.create_edit_profile.synchronization=Remote change detection
+dialog.create_edit_profile.change_detection=Local change detection
 dialog.create_edit_profile.daily_sync=Daily synchronization
 dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
 dialog.create_edit_profile.every_day=Every day
-dialog.create_edit_profile.hour_day_sync=Hour / day of synchronization
+dialog.create_edit_profile.hour_day_sync=Hour / day of sync
 dialog.create_edit_profile.profile_name=Mode name
 dialog.create_edit_profile.periodic_sync=Periodic synchronization
 dialog.create_edit_profile.suggestNameTemplate0={0} (copy)
 dialog.create_edit_profile.suggestNameTemplateN={0} (copy {1})
-dialog.create_edit_profile.sync_deletion=Synchronize deletion
-dialog.create_edit_profile.time_between_scans=(Maximum) time until change detection
+dialog.create_edit_profile.sync_deletion=Synchronize deleted files
+dialog.create_edit_profile.time_between_scans=Scan for changes every
 dialog.create_edit_profile.title_create=Create custom transfer mode
 dialog.single_file_accept.title=Single file accept
 dialog.single_file_accept.line_1=You have received a single file offer from
