--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1052,14 +1052,16 @@ plugin_settings.description=Configure this plugin now
 preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advPort=Port
 preferences.dialog.advanced.title=Advanced
-preferences.dialog.base_dir=Base directory for folders
+preferences.dialog.base_dir=Base directory
 preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
+preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
-preferences.dialog.delta_sync=Use delta sync on the Internet
+preferences.dialog.use_delta_on_internet=on Internet
+preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
@@ -1143,9 +1145,10 @@ preferences.dialog.start_with_windows=Start PowerFolder with Windows
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
-preferences.dialog.swarming.internet=Use swarming downloads on the Internet
+preferences.dialog.swarming.internet=on Internet
 preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN
-preferences.dialog.swarming.lan=Use swarming downloads on LAN
+preferences.dialog.swarming.lan=on LAN
+preferences.dialog.swarming=Multi-source download
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
@@ -1158,14 +1161,14 @@ preferences.dialog.translucent_text=Translucency
 preferences.dialog.ui.title=User Interface
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use UDT connections
-preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
-preferences.dialog.use_delta_on_lan=Use delta sync on LAN
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.show_pf_link=Display PowerFolders directory in Links
 preferences.dialog.use_mass_delete=Use mass delete protection
 preferences.dialog.mass_delete_threshold=Mass delete threshold
+preferences.dialog.zip_compression=ZIP compression
 preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
-preferences.dialog.use_zip_on_lan=Use ZIP compression on LAN
+preferences.dialog.use_zip_on_lan=on LAN
+preferences.dialog.use_zip_on_internet=on Internet
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
 
