refs  #1687 : Also cleanup of line speed selector

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -596,9 +596,9 @@ dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect 
 dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.title=Duplicate use
 dialog.synchronization.duplicate.use=This transfer mode is used by the following folders\:
-dialog.synchronization.receive_changes=Download changes only
+dialog.synchronization.receive_changes=Download changes
 dialog.synchronization.send_and_receive_changes=Up- and download changes
-dialog.synchronization.send_own_changes=Upload own changes only
+dialog.synchronization.send_own_changes=Upload own changes
 dialog.synchronization.sychronizing=Synchronizing...
 dialog.synchronization.title=Manual synchronization
 dialog.unable_to_connect_to_member=Unable to connect to {0}
@@ -961,12 +961,12 @@ line_speed.adsl768=Cable / DSL 16000
 line_speed.adsl1024=Cable / DSL 20000
 line_speed.adsl1536=Cable / DSL 30000
 line_speed.custom_speed=Custom line
-line_speed.download_speed=Download limit
+line_speed.download_speed=Download
 line_speed.lan1000=LAN 1000mbit/s
 line_speed.lan100=LAN 100mbit/s
 line_speed.lan10=LAN 10mbit/s
 line_speed.unlimited=Unlimited
-line_speed.upload_speed=Upload limit
+line_speed.upload_speed=Upload
 
 low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
@@ -1137,8 +1137,8 @@ preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
-preferences.dialog.silent_throttle=Silent-mode bandwidth throttle
+preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
+preferences.dialog.silent_throttle=Pause bandwidth throttle
 preferences.dialog.online_storage.text=Use Online Storage
 preferences.dialog.online_storage.tip=Setup PowerFolder to use Online Storage
 preferences.dialog.start_with_windows=Start PowerFolder with Windows
