--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -281,7 +281,7 @@ action_activate_warning.name=Warning
 
 pro.action_open_license_file.description=Opens a license key file from disk
 pro.action_open_license_file.key=O
-pro.action_open_license_file.name=Open file
+pro.action_open_license_file.name=Open license file
 
 ##################
 # Transfer Modes #
@@ -357,7 +357,7 @@ pro.security.secure=secure
 pro.security.securitysettings=Security Settings
 pro.wizard.activation.activating=Activating PowerFolder Pro
 pro.wizard.activation.agree_gtcs=I agree to the General Terms and Conditions
-pro.wizard.activation.already_account=I'm already registered
+pro.wizard.activation.signup_account=Sign up for an account now
 pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.computers_allowed=Computers allowed\:
 pro.wizard.activation.computers_found=Computers found\:
@@ -366,7 +366,7 @@ pro.wizard.activation.contact_support=Contact the support
 pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_reading_file=Error while reading license key file
 pro.wizard.activation.error_unable_to_read=Unable to read
-pro.wizard.activation.key_abuse=License key abuse detected.
+pro.wizard.activation.key_abuse=Too many computers. Please upgrade to continue.
 pro.wizard.activation.key_expired=Your license key has expired\!
 pro.wizard.activation.key_file=License key file
 pro.wizard.activation.key_valid_till=Key valid till\:
@@ -376,18 +376,16 @@ pro.wizard.activation.no_key_available=No valid license key available
 pro.wizard.activation.number_of_computers=Allowed computers
 pro.wizard.activation.number_gbs=Allowed data (GB)
 pro.wizard.activation.one_key_available=Login successful. Got one license key.
-pro.wizard.activation.online_activation=Online Activation
 pro.wizard.activation.order_additional=Order additional licenses here
-pro.wizard.activation.order_now=Upgrade PowerFolder Pro here
-pro.wizard.activation.password_confirm=Confirm password
-pro.wizard.activation.password_length=Valid Email and at least 6 chars for password required.
-pro.wizard.activation.please_purchase=Please upgrade PowerFolder Pro to continue.
+pro.wizard.activation.order_now=Upgrade PowerFolder
+pro.wizard.activation.password_confirm=Confirm
+pro.wizard.activation.password_length=Valid Email and at least 6 chars as password required.
+pro.wizard.activation.please_purchase=Please upgrade PowerFolder to continue.
+pro.wizard.activation.limit_hit=Only {1} GBs data and {0} folders allowed.
 pro.wizard.activation.pro_activation=PowerFolder Pro Activation
 pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.register_now=Sign up for an account
-pro.wizard.activation.register_now_trial_1=Please create an new trial account for free or
-pro.wizard.activation.register_now_trial_2=login with an existing to use PowerFolder Pro.
-pro.wizard.activation.register_why=Why do I need an account?
+pro.wizard.activation.register_now_trial=Please sign up for an free account to use PowerFolder.
 pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
 pro.wizard.activation.successful=Activation successful
 pro.wizard.activation.thanks_activation=Thank you for activating PowerFolder Pro.
@@ -397,8 +395,7 @@ pro.wizard.activation.try_again=Try again
 pro.wizard.activation.unable_to_login=Unable to login. Email or password wrong?
 pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
-pro.wizard.activation.no_key_info_1=Please login with an existing account to
-pro.wizard.activation.no_key_info_2=activate PowerFolder Pro.
+pro.wizard.activation.no_key_info=Please activate with an existing account.
 
 ##############################
 # Config Loader Translations #
@@ -813,7 +810,7 @@ free_limit_dialog.buy_recommendation2=PowerFolder is currently disabled until yo
 free_limit_dialog.buy_recommendation3=Support us by getting PowerFolder Pro\!
 free_limit_dialog.buy_recommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 free_limit_dialog.heavy_usage_detected=PowerFolder has detected that you are extensively using it.
-free_limit_dialog.reason=Reason\: More than {1} GBs data or more than {0} folders configured.
+free_limit_dialog.reason=Only {1} GBs data and {0} folders allowed.
 free_limit_dialog.reduce=Reduce usage
 free_limit_dialog.title=Extensive use detected
 free_limit_dialog.whatispro=Why should I upgrade to PowerFolder Pro?
