--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1414,7 +1414,7 @@ wizard.login_online_storage.logging_in.text=Please wait while logging in.
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
-wizard.multi_online_storage_setup.title=Configure Online Storage Folders
+wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.pfwizard.title=Folder Wizard
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
 wizard.select_online_storage.title=Select Online Storage folders
