--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -893,10 +893,10 @@ general.yesterday=Yesterday
 
 home_tab.computers=Computer(s)
 home_tab.files_available=File(s) available
-home_tab.files_downloaded=File(s) downloaded
-home_tab.files_downloaded_active=File(s) downloaded ({0} KB/s)
-home_tab.files_uploaded=File(s) uploaded
-home_tab.files_uploaded_active=File(s) uploaded ({0} KB/s)
+home_tab.files_downloads=Download(s)
+home_tab.files_downloads_active=Download(s) ({0} KB/s)
+home_tab.files_uploads=Upload(s)
+home_tab.files_uploads_active=Upload(s) ({0} KB/s)
 home_tab.folders=Folder(s)
 home_tab.in_sync=All folders are synchronized
 home_tab.last_synced=Last synchronized {0}
