--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1417,8 +1417,8 @@ wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure Online Folders
 wizard.pfwizard.title=Folder Wizard
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
-wizard.select_online_storage.title=Select Online Storage folders
-wizard.select_online_storage.info=Please select Online Storage folders to join locally
+wizard.select_online_storage.title=Select Online Folders
+wizard.select_online_storage.info=Please select online folders to join locally
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.send_invitations.invitation_hint1=Enter a email or computer name to invite.
 wizard.send_invitations.information=What is an invitation?
@@ -1460,6 +1460,7 @@ wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
 wizard.what_to_do.join_online=Sync previously setup folders
 wizard.error_title=Wizard error
+wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 wizard.what_to_do.no_os_text=There are no online folders available that\ncould be synced with this computer.
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
 wizard.what_to_do.open_online_documentation=Open documentation
