Friendship and invitation system notifications, refs #1684

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -826,6 +826,9 @@ friend_search.node_table.name=Computer
 friend_search.node_table.account=User
 friend_search.node_table.on_local_network=LAN
 
+friendship.notification.message=You have received a request for friendship.
+friendship.notification.title=Friendship Request Received
+
 folders_tab.no_folders_available=No folders available
 
 friends_panel.connected=Connected
@@ -944,6 +947,9 @@ image_file_info.unknown=Unknown
 invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
+
+invitation.notification.message=You have received an invitation to a folder.
+invitation.notification.title=Invitation Received
 
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation:\n{0}
