--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -840,6 +840,7 @@ general.application.name=PowerFolder
 general.archive_mode=File archive (local)
 general.accept=Accept
 general.reject=Reject
+general.apply=Apply
 general.cancel.key=C
 general.cancel=Cancel
 general.close.key=C
