Reconfigure link and button for OS, refs #1698

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1033,6 +1033,9 @@ online_storage.account_data=Unable to login. Please check input or recover your 
 online_storage.connecting=Connecting to server
 
 online_storage_component.online_storage_text=Online storage: {0}%
+online_storage_component.online_storage_tip=Open this online storage folder in browser
+online_storage_component.online_storage_unjoined_text=Online Storage: 0% (start now)
+online_storage_component.online_storage_unjoined_tip=Backup this folder to Online Storage
 online_storage_component.online_storage_warning=Online storage quota exceeded
 
 percent.place.holder={0}%
