--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1066,6 +1066,7 @@ preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
 preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
+preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 preferences.dialog.use_delta_on_internet=on Internet
