--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1171,6 +1171,8 @@ preferences.dialog.translucent_text=Translucency
 preferences.dialog.ui.title=User Interface
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use UDT connections
+preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
+preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.show_pf_link=Display PowerFolders directory in Links
 preferences.dialog.use_mass_delete=Use mass delete protection
