Wiki link for poor connection, fixes #1606

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -976,7 +976,7 @@ line_speed.upload_speed=Upload
 low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 low_memory.do_nothing=Do Nothing
-low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://wiki.powerfolder.com/wiki/Memory_configuration
+low_memory.error.text=PowerFolder requires more memory in your configuration.\n\nPlease reduce the number of managed files and folders, or configure a larger memory configuration.\n\nhttp\://www.powerfolder.com/wiki/Memory_configuration
 low_memory.error.title=Out of memory
 low_memory.increase=Increase Memory
 low_memory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
@@ -1262,7 +1262,7 @@ status_bar.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
 status_bar.poor_quality_warning.title=Poor connection quality
-status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers
+status_bar.poor_quality_warning.text=Most connections are being routed via PowerFolder servers\n\nhttp\://www.powerfolder.com/wiki/Limited_connectivity
 
 status.download=Down\: {0} KB/s
 status.active_download_count=Active\: {0}
