--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -639,7 +639,7 @@ exp_computer_view.version=Client version: {0}
 exp_folder_view.collapse=Collapse folder details
 exp_folder_view.expand=Expand folder details
 exp_folder_view.files=Files: {0}
-exp_folder_view.files_available={0} file(s) available
+exp_folder_view.files_available={0} available
 exp_folder_view.folder_local_text=Local folder
 exp_folder_view.folder_online_text=Online folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
