--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1353,6 +1353,12 @@ user.dir.my_videos=My Videos
 user.dir.pictures=Pictures
 user.dir.recent_documents=Recent Documents
 user.dir.videos=Videos
+user.dir.movies=Movies
+user.dir.videos=Videos
+user.dir.downloads=Downloads
+user.dir.public=Public
+user.dir.sites=Sites
+
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
