--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -687,6 +687,10 @@ file_info.remote_deleted=Newer version deleted by other computer
 file_info.recently_downloaded=Recently downloaded
 
 file_version_tab.no_versions_available=No version history available
+file_version_tab.current_version=Current version: {0}
+file_version_tab.size=Size: {0}
+file_version_tab.date=Date: {0}
+
 files_table_model.name=Name
 files_table_model.size=Size
 files_table_model.modified_by=Modified by
@@ -1352,7 +1356,6 @@ user.dir.my_pictures=My Pictures
 user.dir.my_videos=My Videos
 user.dir.pictures=Pictures
 user.dir.recent_documents=Recent Documents
-user.dir.videos=Videos
 user.dir.movies=Movies
 user.dir.videos=Videos
 user.dir.downloads=Downloads
