files tab sync button, refs #1706

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1275,6 +1275,8 @@ status.upload=Up\: {0} KB/s
 status.active_upload_count=Active\: {0}
 status.completed_upload_count=Completed\: {0}
 
+sync_icon_button_mini.tip=Synchronize folder now
+
 synchronization.notice.title=Activated transfer mode {0}
 synchronization.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
 
