--- a/.classpath
+++ b/.classpath
@@ -39,6 +39,6 @@
 	<classpathentry kind="lib" path="lib/synthetica/syntheticaWhiteVision.jar"/>
 	<classpathentry kind="lib" path="lib/h2-1.1.109.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-directorychooser.jar"/>
-	<classpathentry kind="lib" path="lib/ehcache-1.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/ehcache-1.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
