Folder name display for new files, fixes #1714

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -646,6 +646,7 @@ exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0} ({1} connected)
 exp_folder_view.never_synchronized=Never synchronized
+exp_folder_view.new_files_text={0} new file(s)
 exp_folder_view.unsynchronized=Unsynchronized
 exp_folder_view.unsynchronized.tip=There are no connected folder members
 exp_folder_view.synchronized={0}% synchronized
