--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -619,6 +619,7 @@ downloads_information_card.auto_cleanup.name=Auto-cleanup
 downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
 downloads_information_card.auto_cleanup.immediate=Immediate
 downloads_information_card.auto_cleanup.days={0} day(s)
+downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 
 download.busy.description=Downloading files from other PowerFolder to your folder
 download.busy.title=Downloading file
@@ -1344,6 +1345,7 @@ uploads_information_card.auto_cleanup.name=Auto-cleanup
 uploads_information_card.auto_cleanup.description=Clean up any uploads when they complete
 uploads_information_card.auto_cleanup.immediate=Immediate
 uploads_information_card.auto_cleanup.days={0} day(s)
+uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
