--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1080,6 +1080,7 @@ preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
+preferences.dialog.dialogs.hour24Time=Display time in 24 hour format 
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.duplicate_localbase.title=Directory in use
 preferences.dialog.duplicate_localbase.message=This directory cannot be selected because\nit is the local folder location for folder {0}
