--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -511,9 +511,9 @@ delete.busy.description=Moving file from your folder to recycle bin
 delete.busy.title=Deleting file
 
 dialog.ask_for_friendship.button.add=Add to friends
-dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+dialog.ask_for_friendship.question={0} joined these PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+dialog.ask_for_friendship.explain=PowerFolder automatically connects\nto computers on your friendslist.
 dialog.ask_for_friendship.message_title=Message from {0}
 dialog.ask_for_friendship.title=Add {0} to friend list
 
