refs #1743 German translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -598,7 +598,7 @@ dialog.update.updating.text=Downloading update
 dialog.update.updating=Updating
 dialog.update_check.downloadAndUpdate=Download and update now
 dialog.update_check.downloadAndUpdateSilent=Download and silently update now
-dialog.update_check.failed.text=Update failed. Please check your Internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+dialog.update_check.failed.text=Update failed. Please check your Internet connection.
 dialog.update_check.failed.title=Update failed
 dialog.update_check.gotoHomepage=Go to PowerFolder homepage
 dialog.update_check.noUpdateAvailable=This version is up to date
