--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1403,7 +1403,7 @@ wizard.finish.os_login_text=The login was successful.
 wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
-wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
+wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
 wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
 wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
