Unknown sync if > 30 days in future, refs #1738

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -930,6 +930,7 @@ home_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
 home_tab.online_storage.usage=Online usage: {0} ({1}%)
 home_tab.online_storage.title=Account
 home_tab.sync_eta=All folders will be synchronized {0}
+home_tab.sync_unknown=Synchronization date unknown
 home_tab.synchronization=Synchronization
 home_tab.synchronizing=Synchronization in progress...
 home_tab.tell_friend.text=Tell a friend about PowerFolder
