"Tomorrow" date format, fixes #1755

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -889,6 +889,7 @@ general.synchonisation=Synchronization
 general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=Today
+general.tomorrow=Tomorrow
 general.transfer_mode=Transfer mode
 general.tuesday=Tuesday
 general.update=Update
