Transfer mode change, fixes #1762

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -289,10 +289,11 @@ pro.action_open_license_file.name=Open license file
 
 transfer_mode.auto_download_friends.name=Auto-download friends
 transfer_mode.automatic_download.name=Automatic download
-transfer_mode.automatic_synchronization.name=Automatic synchronization
-transfer_mode.automatic_synchronization_10min.name=Automatic synchronization (10 minutes)
-transfer_mode.backup_source.name=Backup (source)
-transfer_mode.backup_target.name=Backup (target)
+transfer_mode.automatic_synchronization.name=Automatic synchronization (every minute)
+transfer_mode.automatic_synchronization_10min.name=Automatic synchronization (every 10 minutes)
+transfer_mode.backup_source.name=Backup source (every 5 minutes)
+transfer_mode.backup_source_hour.name=Backup source (every hour)
+transfer_mode.backup_target.name=Backup target
 transfer_mode.custom.name=Custom profile
 transfer_mode.disabled.name=Disabled
 transfer_mode.host_files.name=Share/Send
@@ -1376,7 +1377,7 @@ wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does
 wizard.choose_disk_location.directory_size=Directory size {0}
 wizard.choose_disk_location.maual_sync=Manual synchronization
 wizard.choose_disk_location.options=Please select required options
-wizard.choose_disk_location.total_directory_size=Total size: {0}
+wizard.choose_disk_location.total_directory_size=Total size: {0} Files: {1}
 wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.send_invitation=Send invitation
