--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1331,6 +1331,7 @@ uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
 uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
 uicontroller.remote_mass_delete.warning_title=Mass deletion detected
 uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
+uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
 uploads_information_card.title=Uploads
 uploads_information_card.auto_cleanup.name=Auto-cleanup
