--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1360,6 +1360,13 @@ user.dir.downloads=Downloads
 user.dir.public=Public
 user.dir.sites=Sites
 
+uilock.dialog.title=User interface locked
+uilock.dialog.info=Enter username and password to unlock.
+uilock.dialog.username=Username:
+uilock.dialog.password=Password:
+uilock.dialog.help=Help
+uilock.dialog.exit=Exit
+uilock.dialog.error.wronglogin=Invalid username or password.
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
