--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1163,6 +1163,7 @@ preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
+preferences.dialog.ui_locked=Lock user interface on startup
 preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.auto_expand=Auto expand Folders and Computers
 preferences.dialog.translucent_text=Translucency
@@ -1361,7 +1362,7 @@ user.dir.public=Public
 user.dir.sites=Sites
 
 uilock.dialog.title=User interface locked
-uilock.dialog.info=Enter username and password to unlock.
+uilock.dialog.info=Enter username/email and password to unlock.
 uilock.dialog.username=Username:
 uilock.dialog.password=Password:
 uilock.dialog.help=Help
