--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1163,7 +1163,7 @@ preferences.dialog.underline_link=Always underline links
 preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
-preferences.dialog.ui_locked=Lock user interface on startup
+preferences.dialog.ui_locked=Lock on startup
 preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.auto_expand=Auto expand Folders and Computers
 preferences.dialog.translucent_text=Translucency
