--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -933,7 +933,7 @@ home_tab.online_storage.usage=Online usage: {0} ({1}%)
 home_tab.online_storage.title=Account
 home_tab.sync_eta=All folders will be synchronized {0}
 home_tab.sync_unknown=Synchronization date unknown
-home_tab.synchronization=Synchronization
+home_tab.status=Status
 home_tab.synchronizing=Synchronization in progress...
 home_tab.tell_friend.text=Tell a friend about PowerFolder
 home_tab.tell_friend.tip=Click here to send an email inviting friends to use PowerFolder
