Work on multiple file restore, refs #1765

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1191,6 +1191,11 @@ remove_pattern.prompt=Pattern '{0}' will be removed.
 remove_pattern.remove=Remove
 remove_pattern.title=Remove ignore pattern
 
+restore_files_table_model.file_name=File name
+restore_files_table_model.version=Version
+restore_files_table_model.size=Size
+restore_files_table_model.modified_date=Modified Date
+
 select_invitation.folder_text=Select folder to send invitation for
 select_invitation.message_text=Enter a message for the receiver
 select_invitation.text1=Invitation files are required to join a folder.
@@ -1434,6 +1439,12 @@ wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
 wizard.login_online_storage.logging_in=Logging in...
 wizard.login_online_storage.logging_in.text=Please wait while logging in.
+
+wizard.multi_file_restore_panel.title=File restore
+wizard.multi_file_restore_panel.retrieving=Retrieving file version information {0} of {1}...
+wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
+wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
+wizard.multi_file_restore_panel.retrieving_none=Could not retrieve any file version information.
 
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
